--- a/Proyect_P3/Views/Shared/_Layout.cshtml
+++ b/Proyect_P3/Views/Shared/_Layout.cshtml
@@ -18,13 +18,12 @@
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
 
                     <li>@Html.ActionLink("Consulta Usuario", "Query", "User", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Consulta de Documentos", "TipdocQuery", "Tipdoc", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Tipos de Vehículos", "Tipos", "Tipos", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Marcas de Vehículos", "Marcas", "Marcas", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Categorías de Vehículos", "Categorias", "Categorias", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Cerrar Seccion", "Logoff", "CerrarSeccion", new { area = "" }, new { @class = "nav-link" })</li>
 
                 </ul>
