Fotos todavia no arreglado

--- a/Proyect_P3/Views/Shared/_Layout.cshtml
+++ b/Proyect_P3/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("Tipos de Vehículos", "Tipos", "Tipos", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Marcas de Vehículos", "Marcas", "Marcas", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Categorías de Vehículos", "Categorias", "Categorias", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("AnddyMotorsComprayVendeVehículos", "Vehiculos", "Vehiculos", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Cerrar Seccion", "Logoff", "CerrarSeccion", new { area = "" }, new { @class = "nav-link" })</li>
 
                 </ul>
