--- a/Proyect_P3/Views/Shared/_Layout.cshtml
+++ b/Proyect_P3/Views/Shared/_Layout.cshtml
@@ -24,19 +24,27 @@
                     <li>@Html.ActionLink("Tipos de Vehículos", "Tipos", "Tipos", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Marcas de Vehículos", "Marcas", "Marcas", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Categorías de Vehículos", "Categorias", "Categorias", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("AnddyMotorsComprayVendeVehículos", "Vehiculos", "Vehiculos", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Anddy - Motors", "Vehiculos", "Vehiculos", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Cerrar Seccion", "Logoff", "CerrarSeccion", new { area = "" }, new { @class = "nav-link" })</li>
 
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="container body-content">
+    @if (ViewBag.FullScreen == true)
+    {
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+    }
+    else
+    {
+        <div class="container body-content">
+            @RenderBody()
+        </div>
+    }
+    <hr />
+    <footer>
+        <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+    </footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
