--- a/Proyect_P3/Views/Acceder/Login.cshtml
+++ b/Proyect_P3/Views/Acceder/Login.cshtml
@@ -279,7 +279,7 @@
 
                 $.post(Url, parametros, function (data) {
                     if (data == "1") {
-                        window.location.href = "@Url.Action("Index", "Home")";
+                        window.location.href = "@Url.Action("Index", "Vehiculos")";
                     } else {
                         alert("❌ " + data);
                     }
