--- a/Proyect_P3/Views/Shared/_Layout.cshtml
+++ b/Proyect_P3/Views/Shared/_Layout.cshtml
@@ -10,23 +10,19 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
         <div class="container">
-            @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            @Html.ActionLink("Anddy Motors Company", "Index", "Vehiculos", new { area = "" }, new { @class = "navbar-brand" })
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-
                     <li>@Html.ActionLink("Consulta Usuario", "Query", "User", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Consulta de Documentos", "TipdocQuery", "Tipdoc", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Tipos de Vehículos", "Tipos", "Tipos", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Marcas de Vehículos", "Marcas", "Marcas", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Categorías de Vehículos", "Categorias", "Categorias", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Anddy - Motors", "Vehiculos", "Vehiculos", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Cerrar Seccion", "Logoff", "CerrarSeccion", new { area = "" }, new { @class = "nav-link" })</li>
-
                 </ul>
             </div>
         </div>
